@@ -15,6 +15,9 @@ line[ 	]+([0-9]+),[ 	]+([^, 	]+)
 # [filename.c:789]
 \[([^\[: 	]+):([0-9]+)\]
 
+# d:/filename.c:856
+([A-Z|a-z]:[^:]+):[       ]*([0-9]+)
+
 # filename.c:789
 ([^:]+):[ 	]*([0-9]+)
 
